# easyeffects2pipewire

./: LICENSE  README.md  alsa_output.usb-Samsung_Samsung_USB_C_Earphones_20160406.1-00.analog-stereo.conf  main.py  mb_compressor_utils.sh  pyproject.toml  utils.py
ee2pw/: __init__.py  __main__.py  bass_enhancer.py  core.py  filter.py  limiter.py  links.py  lv2_wrapper.py  multiband_compressor.py  stereo_tools.py  util.py
extras/examples/: active_2s.json  alsa_output.pci-0000_73_00.6.HiFi__Speaker__sink.conf  flat_compressed.json  think.json
extras/presets/: Active 2S.json  CX.json  CX8New.json  Flat Compressed.json  Think.json  Trees.json
presets/: CX.json  CX8EQ.json  Think.json
tests/: test_links.py  test_lv2_wrapper.py
